fix some spacing issues.

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -2,7 +2,7 @@
 // $sans-serif: $helvetica;
 $serif: "Chronicle SSm A", "Chronicle SSm B", "Arnhem Pro", Georgia;
 $base-font-family: $serif;
-$base-font-size: 110%;
+$base-font-size: 1.1em;
 $base-line-height: $base-font-size * 1.5;
 $base-font-color: #404040;
 
